crates/oxc_react_compiler/tests/snapshots/repro-bailout-nopanic-shouldnt-outline.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-bailout-nopanic-shouldnt-outline.js
---
No changes.
