crates/oxc_react_compiler/tests/snapshots/repro-context-var-reassign-no-scope.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-context-var-reassign-no-scope.js
---
import { c as _c } from "react/compiler-runtime";
import { useState, useEffect } from "react";
import { invoke, Stringify } from "shared-runtime";
function Content() {
	const $ = _c(7);
	const [announcement, setAnnouncement] = useState("");
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [{ name: "John Doe" }, { name: "Jane Doe" }];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const [users, setUsers] = useState(t0);
	let t1;
	let t2;
	if ($[1] !== users) {
		t1 = () => {
			if (users.length === 2) {
				let removedUserName = "";
				setUsers((prevUsers) => {
					const newUsers = [...prevUsers];
					removedUserName = newUsers.at(-1).name;
					newUsers.pop();
					return newUsers;
				});
				setAnnouncement(`Removed user (${removedUserName})`);
			}
		};
		t2 = [users];
		$[1] = users;
		$[2] = t1;
		$[3] = t2;
	} else {
		t1 = $[2];
		t2 = $[3];
	}
	useEffect(t1, t2);
	let t3;
	if ($[4] !== announcement || $[5] !== users) {
		t3 = <Stringify users={users} announcement={announcement} />;
		$[4] = announcement;
		$[5] = users;
		$[6] = t3;
	} else {
		t3 = $[6];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Content,
	params: [{}],
	sequentialRenders: [{}, {}]
};
