crates/oxc_react_compiler/tests/snapshots/repro-dispatch-spread-event-marks-event-frozen.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-dispatch-spread-event-marks-event-frozen.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
function Component() {
	const $ = _c(2);
	const dispatch = useDispatch();
	let t0;
	if ($[0] !== dispatch) {
		t0 = <div><input type="file" onChange={(event) => {
			dispatch(...event.target);
			event.target.value = "";
		}} /></div>;
		$[0] = dispatch;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
function useDispatch() {
	"use no memo";
	return (...values) => {
		console.log(...values);
	};
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
