crates/oxc_react_compiler/tests/snapshots/repro-duplicate-import-specifier.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/repro-duplicate-import-specifier.ts
---
import { c as _c } from "react/compiler-runtime";
import type { SetStateAction, Dispatch } from "react";
import { useState } from "react";
function Component(_props) {
	const $ = _c(2);
	const [x] = useState(0);
	let t0;
	if ($[0] !== x) {
		t0 = { x };
		$[0] = x;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
